styles/stylesheet.css
body {
	font-family: 'Open Sans', sans-serif;
}

#background-img {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-image: url('../images/scu_logo_large.jpg');
	background-position: 85% 0%;
	background-repeat: no-repeat;
	background-attachment: fixed;
	opacity: .07;
}

#top-bar {
	height: 50px;
	width: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background-color: #941A1E;
	z-index: 1;
}
	#top-bar #major li{
		z-index: 2;
		cursor: pointer;
		float: left;
		list-style-type:none;
		background-color: white;
		color: #941A1E;
		margin: 0px 0px 0px 0px;
		padding: 8px 15px;
		border-radius: 15px;
		position:relative;
		top:0px;
		left:0px;
	} #top-bar #major li:hover {
		background-color: #e36365;
	} #top-bar #major li:hover > ul li {
		display: block;
	}
		#top-bar #major {
			margin:0px;
			position: relative;
			top: 5px;
		}
		#top-bar #major li ul {
			margin: 0px;
			padding: 0px;
		}
		#top-bar #major li ul li {
		 	display: none;
		 	float: left;
		 	clear: both;
		 	margin: 5px 0px 0px 0px;
		} #top-bar #major li ul li:hover {
			background-color: #cc595a;
		}


	#top-bar h1 {
		position: absolute;
		left: 40%;
		font-size: 25px;
		top: 10px;
		line-height: 30px;
		margin: 0;
		padding: 0;
		color: white;
		font-weight: 300;
	}
	#top-bar .step-button {
		position: relative;
		top: -5px;
		cursor: pointer;
		margin: 0;
		padding: 10px 20px;
		background-color: white;
		font-size: 15px;
		border: none;
		border-radius: 15px;
		color: #941A1E;
		overflow:visible;
	} #top-bar .step-button:focus {
		outline: none;
	} #top-bar .step-button:hover {
		color: white;
		background-color: #e36365;
	}

	#top-bar .step-button-ie {
		position: relative;
		top: -5px;
		cursor: pointer;
		margin: 0;
		padding: 10px 20px;
		background-color: white;
		font-size: 15px;
		border: none;
		border-radius: 15px;
		color: #941A1E;
		overflow:visible;
	} #top-bar .step-button-ie:focus {
		outline: none;
	} #top-bar .step-button-ie:hover {
		color: white;
		background-color: #e36365;
	}

	

/* ---- START APP CONTAINER ---- */
#app-container {
	position: absolute;
	left: 50%;
	top: 50px;
	margin-left: -550px;
	width: 1100px;
}
	/* ---- START STEP 1 VIEW ---- */
	#choose-major {
		width: 700px;
		height: 50px;
		position: relative;
		top: 250px;
		left: 200px;
		display: block;
		list-style: none;
		overflow: auto;
		padding: 0;
		margin: 0;
		background-color: white;
		border-radius: 15px;
		border: solid 2px #941A1E;
	}
		#choose-major li {
			line-height: 50px;
			width:350px;
			cursor: pointer;
			display: block;
			font-size: 20px;
			float: left;
			height: 50px;
			color: #941A1E;
			text-align: center;
			border-radius: 0px;
		} #choose-major .selected-major {
			color: white;
			background-color: #941A1E;
		}
	/* ---- END STEP 1 VIEW ---- */

	/* ---- START INPUT COMPONENT  ---- */
	#input-component {
		position: absolute;
		top: 90px;
		left: 0;
		width: 1100px;
		height: 300px;
		border-radius: 0px 15px 15px 15px;
		border: 2px solid #941A1E;
		font-weight: 400;
		background-color: rgba(255,255,255, .7);
	}
		#input-component nav {
			position: absolute;
			height: 50px;
			left: -2px;
			top: -52px;
			margin: 0;
			padding: 0;
			border-bottom: solid 2px #941A1E;
		}
			#input-component nav ul {
				display: block;
				list-style: none;
				overflow: auto;
				padding: 0;
				margin: 0;
				background-color: #ed9798;
				border-top-left-radius: 15px;
				border-top-right-radius: 15px;
			}
				#input-component nav ul li {
					cursor: pointer;
					display: block;
					float: left;
					height: 50px;
					padding: 0px 20px;
					text-align: center;
					background-color: #ed9798;
					border-radius: 15px 15px 0px 0px;
				} #input-component nav ul li:first-child {
					padding-left: 40px;
				} #input-component nav ul li:last-child {
					padding-right: 40px;
				} .select-this-nav {
					background-color: #941A1E !important;
				} .select-this-nav > a {
					color: white !important;
				}
					#input-component nav ul li a {
						font-size: 20px;
						line-height: 50px;
						text-decoration: none;
						color: #941A1E;
					} #input-component nav ul li:first-child > a{
						position: relative;
						left: -10px;
					} #input-component nav ul li:last-child > a{
						position: relative;
						right: -10px;
					}
		#input-component .input-label {
			position: relative;
			margin: 30px 0px 0px 30px;
			color: #941A1E;
			display: block;
			float: left;
			font-size: 25px;
		} 
		#input-component select {
			display: block;
			float: left;
			width: 350px;
			margin: 30px 0px 0px 20px;
			border: 2px solid #941A1E;
			background-color: white;
			color: #941A1E;
			font-size: 25px;
			line-height: 30px;
		} #input-component select:focus {
			outline: none;
		}
		#input-component .selection-description {
			display: block;
			float: left;
			clear: both;
			width: 450px;
			font-size: 20px;
			margin: 30px 0px 0px 40px;
			color: #941A1E;
		}
		#input-component #ap-test-score {
			position:absolute;
			left: 40px;
			bottom: 50px;
			margin-left: 40px;
			width: 150px;
			height: 30px;
			display: block;
			list-style: none;
			padding: 0;
			margin: 0;
			background-color: white;
			border-radius: 15px;
			border: solid 2px #941A1E;
		}
			#input-component #ap-test-score li {
				width: 50px;
				cursor: pointer;
				display: block;
				font-size: 20px;
				float: left;
				height: 30px;
				color: #941A1E;
				text-align: center;
				border-radius: 13px;
			} .selected-ap-test-score {
				color: white !important;
				background-color: #941A1E;		
			}
		#input-component .add-selection {
			position: absolute;
			bottom: 50px;
			left: 200px;
			cursor: pointer;
			padding: 7px 20px;
			background-color: white;
			font-size: 15px;
			border: none;
			border-radius: 15px;
			color: #941A1E;
			background-color: white;
			border: 2px solid #941A1E;
		} #input-component .add-selection:hover {
			color: white;
			background-color: #941A1E;
		} #input-component .add-selection:focus {
			outline: none;
		}
		#add-transfer-credit-selection {
			left: 50px !important; 
		}
		#input-component .added-selections {
			width: 450px;
			position: absolute;
			height: 240px;
			padding: 0;
			margin: 30px 30px;
			right: 0;
			border-radius: 15px;
			border: 2px solid #941A1E;
		}
			#input-component .added-selections h2 {
				text-align: center;
				color: #941A1E;
				font-size: 26px;
			}
			#input-component .added-selections ul {
				list-style-type: none;
				padding-right: 40px;
				font-size: 18px;
				color: #941A1E;
				max-height: 150px;
				overflow-y: auto;
			}
			#input-component .added-selections ul li button{
				float: right;
				cursor: pointer;
				padding: 0px 10px;
				background-color: white;
				font-size: 15px;
				border: none;
				border-radius: 12px;
				color: #941A1E;
				background-color: white;
				border: 2px solid #941A1E;
			} #input-component .added-selections ul li button:hover {
				color: white;
				background-color: #941A1E;
			} #input-component .added-selections ul li:hover {
				background-color: #f4e8e8;
			} #input-component .prev-exp-paragraph{
				display: block;
				float: left;
				clear: both;
				width:100%;
				font-size: 22px;
				margin: 20px 0px 0px 40px;
				color: #941A1E;			
			} #input-component .prev-exp-paragraph input[type='checkbox']{
				height:25px;
				width:25px;
				vertical-align:middle;
				float:right;
				margin-right:100px;
			}
	/* ---- END INPUT COMPONENT ---- */

	/* ---- START OUTPUT COMPONENT ---- */
	#output-component {
		position: absolute;
		top: 460px;
		left: 0;
		width: 1100px;
		height: 380px;
		border-radius: 15px;
		border: 2px solid #941A1E;
		background-color: rgba(255,255,255, .7);
	}
		#output-component #quarter-titles {
			position: absolute;
			list-style: none;
			margin: 0;
			padding: 0;
			width: 1000px;
			top: -40px;
		}
			#output-component #quarter-titles li {
				display: block;
				float: left;
				padding: 0px 145px;
				font-size: 25px;
				color: #941A1E;
			} #output-component #quarter-titles li:first-child {
				padding-left: 175px;
			} #output-component #quarter-titles li:last-child {
				padding-right: 10px;
			}
		#courses {
			left: 0;
			top: 0;
			margin: 20px;
			padding: 0;
			width: 1060px;
			height: 340px;
			list-style: none;
		}
			#courses .quarter {
				list-style: none;
				margin: 0px;
				padding: 0px;
				float: left;
				width: 340px;
				height: 340px;
			}
			#courses .quarter:nth-child(2) {
				margin-left: 20px;
				margin-right: 20px;
			}
				#courses .quarter .course {
					position: relative;
					border-radius: 15px;
					height: 64px;
					margin: 5px 0px;
				} #courses .quarter .course:first-child {
					margin-top: 0px;
				} #courses .quarter .course:last-child {
					margin-bottom: 0px;
				} .engineering-course {
					background-color: #d7e7c4;
					color: #35481e;
				} .math-course {
					background-color: #cae0ea;
					color: #234758;
				} .humanities-course {
					background-color: #eedfbc;
					color: #624c18;
				} .other-course {
					background-color: #ed9798;
					color: #941A1E;
				}
					#courses .quarter .course .course-title {
						position: relative;
						display: block;
						float: left;
						font-size: 20px;
						margin: 0;
						top: 10px;
						left: 10px;
					}
					#courses .quarter .course .course-units {
						position: relative;
						display: block;
						float: right;
						font-size: 13px;
						margin: 0;
						top: 10px;
						right: 10px;	
					}
					#courses .quarter .course .course-description {
						position: relative;
						display: block;
						font-size: 13px;
						float: left;
						clear: both;
						margin: 0;
						top: 10px;
						left: 10px;	
					} 

		#key {
			list-style: none;
			position:absolute;
			margin: 0;
			padding: 0;
			bottom: -50px;
			left: 50px;
		}
			#key li {
				display: block;
				float: left;
				padding: 0px 20px;
				font-size: 12px;
			}
				#key li div {
					position: relative;
					border-radius: 4px;
					margin-right: 5px;
					display: block;
					float: left;
					width: 20px;
					height: 20px;
				} #engineering-key {
					background-color: #d7e7c4;
				} #math-key {
					background-color: #cae0ea;
				} #humanities-key {
					background-color: #eedfbc;
				} #other-key {
					background-color: #ed9798;
				}
		
		#print-button {
			cursor: pointer;
			position: absolute;
			margin: 0;
			padding: 10px 20px;
			right: 0;
			bottom: -60px;
			background-color: white;
			font-size: 15px;
			border: none;
			border-radius: 12px;
			color: white;
			background-color: #941A1E;
		} #print-button:hover {
			background-color: #e36365;
		} #print-button:focus {
			outline: none;
		}
	/* ---- END OUTPUT COMPONENT ---- */

